--- a/task-creating-relationships.adoc
+++ b/task-creating-relationships.adoc
@@ -185,6 +185,10 @@ NOTE: Hard links are only available for unsecured NFS to NFS relationships. User
 Exclude File Extensions:: Specify file extensions to exclude from the sync by typing the file extension and pressing *Enter*. For example, type _log_ or _.log_ to exclude *.log files. A separator isn't required for multiple extensions. The following video provides a short demo:
 +
 video::video_file_extensions.mp4[width=840, height=240]
++
+Users can also exclude files by regex. To do so, follow the same steps as above.
++
+NOTE: Regex, or regular expressions, differ from wildcards or glob expressions. This feature *only* works with regex.
 
 Exclude Directories:: Specify a maximum of 15 directories to exclude from the sync by typing their name or directory full path and pressing *Enter*. The .copy-offload, .snapshot, ~snapshot directories are excluded by default. If you would like to include these in your sync, please contact us.
 
